--- a/index.html
+++ b/index.html
@@ -1,21 +1,27 @@
 <!DOCTYPE html>
 	<head>
 		<meta charset="utf-8">
-		<title>Title</title>
+		<title>Chemotaxis</title>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="styles.css">
 		<script src="processing.js"></script>
 	</head>
 	<body>
 		<header>
-			<h1>Headline</h1>
+			<h1>Chemotaxis</h1>
 		</header>
 			<section id="content">
 				<canvas id="Chemotaxis" data-processing-sources="Chemotaxis.pde">
 				</canvas>
 		    </section>
 	    <footer>
-		    Footer
+		    Help the green bacteria get to the Cake without getting eaten by the other bacteria.
+
+		    Keys
+		    w = up
+		    a = left
+		    s = down
+		    d = right
 	    </footer>
 	</body>
 </html>
